--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,10 @@
 services:
   db:
     container_name: comiket-db
-    image: mongo
-    ports:
-      - 20000:27017
+    image: postgres:17.5
     volumes:
-      - dbdata:/data/db
-      - ./db/seed.js:/docker-entrypoint-initdb.d/seed.js:ro
+      - ./dbdata:${PGDATA}
+      - ./db/seed.sql:/docker-entrypoint-initdb.d/seed.sql
     env_file:
       - .env
 
