--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     volumes:
       - ./dbdata:${PGDATA}
       - ./db/seed.sql:/docker-entrypoint-initdb.d/seed.sql
+    ports:
+      - 5432:5432
     env_file:
       - .env
 
